assets/css/extra.css
/*
All extra css not in the original main.css by HTML5 UP
Karim Bahgat
*/

.tooltip {
    position:relative; /* making the .tooltip span a container for the tooltip text */
    border-bottom:1px dashed #000; /* little indicater to indicate it's hoverable */
}
.tooltip:before {
    content: attr(data-text); /* here's the magic */
    position:absolute;

    /* move to top */
    bottom:100%;
    margin-bottom:10px;

    /* horizontally center */
    left:50%;
    margin-left:-100px; /* half the width */

    /* basic styles */
    width:200px;
    padding:10px;
    border-radius:10px;
    background:#000;
    color: #fff;
    text-align:center;
    font-size:12px;

    display:none; /* hide by default */
}
.tooltip:hover:before {
    display:block;
}

.map {
    width: 100%;
    height:600px;
    padding:0;
    margin:0;
}
.map:-webkit-full-screen {
    height: 100%;
    margin: 0;
    padding:0;
}
.map:-ms-fullscreen {
    height: 100%;
}
.map:fullscreen {
    height: 100%;
}

.sidepanel{
    height:400px;
    width:20%;
    padding:0;
    margin:0;
}

.toolbox {
    padding-left: 2px;
    margin-top: 0px;
    margin-left: 2px;
    height:600px;
}

.box {
    border-left:1px solid rgb(240, 179, 35);
    border-right:1px solid rgb(240, 179, 35);
    border-bottom:1px solid rgb(240, 179, 35);
    border-top: 1px solid rgb(240, 179, 35);
    border-radius:0;
}

li.tab{
    top:0px;
    padding-top:0px;
    border-bottom:0;
    border-left: 1px solid rgb(240, 179, 35);
    border-right: 1px solid rgb(240, 179, 35);
    border-top: 1px solid rgb(240, 179, 35);
    border-bottom: 0px;
}

a{
    border-bottom:0;
}

li.tab.active{
    padding-top:0px;
    border-bottom:0;
    border-left: 1px solid rgb(240, 179, 35);
    border-right: 1px solid rgb(240, 179, 35);
    border-top: 1px solid rgb(240, 179, 35);
}

ul li{
    padding-left: 0;
}


/*...*/


#comparison-file-table {
    border-collapse: collapse;
    width: 100%;
}

#comparison-file-table td, #comparison-file-table th {
    max-width: 150px;
    word-wrap: break-word;
    border: 1px solid #ddd;
    padding: 8px;
}

#comparison-file-table tr:nth-child(even){background-color: #f2f2f2;}

#comparison-file-table tr:hover {background-color: #ddd;}

#comparison-file-table th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: rgb(255,0,0);
    color: white;
}



#gb-file-table {
    border-collapse: collapse;
    width: 100%;
}

#gb-file-table td, #gb-file-table th {
    max-width: 150px;
    word-wrap: break-word;
    border: 1px solid #ddd;
    padding: 8px;
}

#gb-file-table tr:nth-child(even){background-color: #f2f2f2;}

#gb-file-table tr:hover {background-color: #ddd;}

#gb-file-table th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #319FD3;
    color: white;
}



.gb-table {
    border-collapse: collapse;
    width: 100%;
}

.gb-table td, .gb-table th {
    max-width: 150px;
    word-wrap: break-word;
    border: 1px solid #ddd;
    padding: 8px;
}

.gb-table tr:nth-child(even){background-color: #f2f2f2;}

.gb-table tr:hover {background-color: #ddd;}

.gb-table th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #319FD3;
    color: white;
}



.comparison-table {
    border-collapse: collapse;
    width: 100%;
}

.comparison-table td, .comparison-table th {
    max-width: 150px;
    word-wrap: break-word;
    border: 1px solid #ddd;
    padding: 8px;
}

.comparison-table tr:nth-child(even){background-color: #f2f2f2;}

.comparison-table tr:hover {background-color: #ddd;}

.comparison-table th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: rgb(255,0,0);
    color: white;
}



.stats-value {
    font-weight: bold;
}



.popup {
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 9999;
    width: 100%;
    height: 100%;
    background-color: black;
    background-color: rgba(0, 0, 0, 0.4);
    -webkit-transition: 0.5s;
    overflow: auto;
    transition: all 0.3s linear;
}

.popup-content {
    background-color: #fefefe;
    margin: auto;
    margin-top: 5vh;
    padding: 20px;
    border-radius: 4px;
    width: 80vw;
    height: 90vh;
    overflow: auto;
}

.popup-open { overflow: hidden; }

.is-hidden { display: none; }

.is-visually-hidden { opacity: 0; }

.popup-close {
    color: #aaaaaa;
    float: right;
    font-size: 16px;
}

.popup-close:hover, .popup-close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.is-blurred {
    filter: blur(2px);
    -webkit-filter: blur(2px);
}

